refactor(backend): clean up controller return types and service layer